--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,3 +50,17 @@ dependencies = [
     "langchain-anthropic>=1.0.1",
     "langchain-experimental>=0.0.42",
 ]
+
+# comment out if CPU only installation is needed
+[tool.uv.sources]
+torch = [
+    { index = "pytorch-cu130" },
+]
+torchvision = [
+    { index = "pytorch-cu130" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cu130"
+url = "https://download.pytorch.org/whl/cu130"
+explicit = true
