--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,9 @@ dependencies = [
     "langchain-ollama>=1.0.0",
     "langchain-anthropic>=1.0.1",
     "langchain-experimental>=0.0.42",
+    "bitsandbytes>=0.49.0",
+    "trl>=0.26.2",
+    "peft>=0.18.0",
 ]
 
 # comment out if CPU only installation is needed
